environments/staging/my-app/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
  namespace: foo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: my-app
